--- a/2FA-Solver.html
+++ b/2FA-Solver.html
@@ -36,10 +36,10 @@
   
     <title>2段階認証アプリ</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="configs/default.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="configs/favicon.ico" />
-	<script type="text/javascript" src="configs/sha.js"></script>
-	<link rel="stylesheet" type="text/css" href="configs/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="./configs/default.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="./configs/favicon.ico" />
+	<script type="text/javascript" src="./configs/sha.js"></script>
+	<link rel="stylesheet" type="text/css" href="./configs/bootstrap.min.css">
   </head>
   <body>
 
@@ -126,7 +126,7 @@
                     </div>
         </li>
 </ul></br>
-	<a href="https://iamyuthan.github.io/2FA-Solver/#user-guide" target="_blank"><button type="button" style="background-color:green; color:white" class="blink">
+	<a href="https://github.com/JF6DEU/2FASolver/" target="_blank"><button type="button" style="background-color:green; color:white" class="blink">
                                           ここをクリックするとこのページのユーザーガイドを表示します。
 		</button></a></br></br>
     <p><u>作成者:</u> <b>Yuthan K</b> </br>
@@ -140,7 +140,7 @@
         }, 500);
 		});
     </script>
-    <script src="configs/jquery.slim.min.js"></script>
+    <script src="./configs/jquery.slim.min.js"></script>
 	<!-- 
 		@author - Nuintun
 	-->
@@ -161,7 +161,7 @@
         }
       }
     </script>
-    <script type="text/javascript" src="configs/qrcode.js"></script>
+    <script type="text/javascript" src="./configs/qrcode.js"></script>
     <script type="text/javascript">
       // Tab Switch
       var nav = $('.tabs li');
